update ac recommend and ac api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,140 @@
     <string name="open">打开</string>
     <string name="close">关闭</string>
 
-</resources>
+
+    <string name="click">点击</string>
+    <string name="reply">回复</string>
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+    <!--<string name="close">关闭</string>-->
+    <!--<string name="open">打开</string>-->
+ </resources>
